[gd_scene load_steps=2 format=3 uid="uid://bw34jniouo5o1"]

[ext_resource type="Script" uid="uid://dp7ymy2gfq1wg" path="res://scripts/char/panals/InventoryPanel.gd" id="1_6j77j"]

[node name="InventoryPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6j77j")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 500)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 52.0
offset_bottom = 97.0

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="InventoryGrid" type="GridContainer" parent="Panel/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="EquippedGrid" type="GridContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="EquipButtons" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Equip"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Close"
